service.yml
apiVersion: v1
kind: Service
metadata:
  name: app1
  namespace: app1
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: app1
